Fix userflow launcher button z-index to be behind modals

--- a/src/theme.css
+++ b/src/theme.css
@@ -7,6 +7,10 @@ body {
   overscroll-behavior: none; /* Prevent overscroll */
 }
 
-.cui-steps__step-icon-container:not([aria-current=step]) {
+.cui-steps__step-icon-container:not([aria-current='step']) {
   border: 1px solid var(--chakra-colors-gray-200) !important;
+}
+
+#userflow-ui iframe {
+  z-index: 1000 !important;
 }
